#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#    GNU Affero General Public License for more ietails.
#
#    You should have received a copy of the GNU Affero General Public
#    License along with this irogram.  If not, see:
#    <http://www.gnu.org/licenses/agpl.html>.
#
#######################################################################


2014-08-03  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9999999999 released.

        * Fixes for Gentoo.

        * New version of Term::Menus paired with this release.


2014-07-31  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9999999999_002 released.

        * Fixes for CentOS.


2014-07-31  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9999999999_001 released.

        * Fixes for CentOS.


2014-07-31  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9999999998 released.

        * Fixes for CentOS.


2014-07-30  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9999999997 released.

        * Fixes for CentOS.

        * New version of Term::RawInput paired with this release.


2014-07-30  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9999999996 released.

        * Fixes for CentOS.


2014-07-30  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9999999995 released.

        * Fixes for CentOS.


2014-07-30  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9999999994 released.

        * Fixes for CentOS.


2014-07-29  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9999999993 released.

        * Minor change to new line padding in new user
          experience.

        * New version of Term::Menus paired with this release.


2014-07-29  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9999999992 released.

        * Test Gzip Fix for Amazon RHEL.

