@@ -14,7 +14,7 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 26570af26d43478ea59c0bc38726e223c5eacf4b ChangeLog
+SHA1 9e2582d8e1cd89cc9dc1c3548403ba7a30f4b79b ChangeLog
 SHA1 d7f05f3c29deb4f29dd9291d5076899b3f92cd20 FIGlet_fonts/3-d.flf
 SHA1 8238eb029ef0be3083cd5982100b4000bd8aacb8 FIGlet_fonts/4x4_offr.flf
 SHA1 f3223bb52e36d14098e1ed1f7790593a09230d68 FIGlet_fonts/5lineoblique.flf
@@ -92,8 +92,8 @@ SHA1 5939c33dff38893a1dcf0ba68b97845f7c63e1fa FIGlet_fonts/wavy.flf
 SHA1 f81af8fd43e0f19c168343709749ef4da3972e6d FIGlet_fonts/weird.flf
 SHA1 62647027745e394450492878f8d8730548d83fa2 LICENSE
 SHA1 3969a1b82753ea591ce1b77ed0ccf1403b480052 MANIFEST
-SHA1 9d00a3955a1af932b57deb96db0b459be6203412 META.yml
-SHA1 bd8992bba1fca0f65c5cbdf3995735980dc9a4da Makefile.PL
+SHA1 2b2aa69d76f4fa6d7403635a1eced57045a295a0 META.yml
+SHA1 ee3e4775adebd3b0f32393cabca1a79e390ce03f Makefile.PL
 SHA1 05aead0f26b0f71a00bad5badbf390f2c92dcd1d README
 SHA1 ecb089134bba590f02aa974be5a6e86d72cdb0dc UNINSTALL_CYGWIN
 SHA1 ade875b98aca4971a381d2e037ed009b52c2f8da bin/fullauto.pl
@@ -122,7 +122,7 @@ SHA1 6fed559b971e9d2f091e0776ddbb131be5225a36 inc/Module/Install/Win32.pm
 SHA1 ea528c813c3473a2674fcbed06531c2f795116ce inc/Module/Install/WriteAll.pm
 SHA1 00bb8470354d11bd7c2c74633083ebe627eb2b7e inc/Module/Install/with.pm
 SHA1 e1d3650b6801a3cb2e6de38574e9327914c96d40 install_mozrepl_plugin.ahk
-SHA1 50cc0e64f62b0ac28e1c336dec292c539f00fe06 lib/Net/FullAuto.pm
+SHA1 9e6342c28fa3b68c169659e0cbb6dc0ef74f37a0 lib/Net/FullAuto.pm
 SHA1 cc3f8588c96516de2802c68be465447d17f781aa lib/Net/FullAuto/Custom/BackUp/README
 SHA1 5032ba28f88dbf163b0d4dd158948af9124568c9 lib/Net/FullAuto/Custom/README
 SHA1 5b1702f20efb104e3375934cf55a7438c19e109a lib/Net/FullAuto/Distro/fa_code.pm
@@ -139,11 +139,11 @@ SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1
 
-iQEcBAEBAgAGBQJT3mD7AAoJEBa/9Pad787EK64H/1USlXhVhFyTVfbmssPhT67V
-l0lYP/q8tZHZQZcrl4sZqg/cCcNhK0z/9XnPjB47WoaIUQINPIhaE4S3oHP8VSSC
-5qYMbDb0DPPbbRXlspZnIMuGU21605EtbQYUtUBXrybjyPB1PSGDDhbsbUEuNwT3
-Orq6e4x+a9M1nualOoVu8OazfjSLI3MWdsAyjUmJmkGhCSKE9iEIO/5Y7nr0czX1
-gJ90w807gFUzELiktc0n6CFz4jTYPxu3nvyD/ITwmkOBB8yOVhs53RUzwhVYMan3
-OI58PCl1R5QvkWKBbhmWtfNU3fvLpCbRUdEoHJ7t5mz8dt/HllRRJR9T1iSLAU0=
-=e9Oa
+iQEcBAEBAgAGBQJUAfxUAAoJEBa/9Pad787EPeUH/i8wkVbap2zcDga+5i0eAKt+
+jKO+dolU2BEtSYx1VqFQu2ehfJiBL+xXG1nwN+bvCL5NGgWL6E0L1D6J2slR3uVJ
+t9l2+Kg90/2/N1P35EE75yjfy1LncpJ7huwNr6odRwOP+sg3x3GMUYueLUmvj/Tu
+umrxfdeSJqX4RFsOSxqHJpHB1JzmRZQsQdwYHBWLGhQTUSOTya29G03Vs8jeEpuG
+9i20YJufDxV1wnMyCIc+Ob/rT/9rjgA+YtJF2rv2brqAbkzvQ4X+WpHiTSMLHcUT
+dceVw0keNXDFyl6ZmA+94isFu8HalSKAxX0mnurAYtIUMaVGYrYqunRizaehYDI=
+=r1jx
 -----END PGP SIGNATURE-----
