@@ -20,6 +20,14 @@
 #######################################################################
 
 
+2014-08-30  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
+
+        * Version 0.999999999901 released.
+
+        * Added Makefile.PL code to check and install
+          openssl-devel.
+
+
 2014-08-03  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
 
         * Version 0.9999999999 released.
